--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "express": "^4.16.4",
     "querystring": "^0.2.0",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "dotenv": "^7.0.0"
   }
 }
