--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/LaupWing/Spotify-API#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "querystring": "^0.2.0",
     "request": "^2.88.0"
   },
