--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "node-fetch": "^2.3.0",
     "querystring": "^0.2.0",
     "request": "^2.88.0"
   },
